k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mediapackage-proxy
  labels:
    name: mediapackage-proxy
