k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediapackage-proxy-service
  namespace: mediapackage-proxy
  labels:
    app: mediapackage-proxy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: mediapackage-proxy
